<resources>

    <string name="app_name">Trabalho de Graduacao</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">About</string>
    <string name="title_activity_main">Trabalho de Graduação</string>
    <string name="about">Sobre</string>
    <string name="textAbout">Trabalho de graduação desenvolvido pelo aluno Osmar Salles de Carvalho de R.A. 000 000 000, pela Faculdade de Tecnologia de São José dos Campos FATEC-SJC, SP, Brasil.</string>
    <string name="login">Login</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="retryPassword">Repetir Senha</string>
    <string name="btnEntry">Entrar</string>
    <string name="imgBluetooth">Estado da Conexão com Sistema</string>
    <string name="imgClearLog">Limpar Log</string>
    <string name="imgMenuBorder">Borda do Menu</string>
    <string name="imgMenuItemTool">Ferramentas</string>
    <string name="imgMenuItemUser">Usuários</string>
    <string name="imgMenuItemHome">Menu Principal</string>
    <string name="imgMenuAbout">Sobre</string>
    <string name="imgLight">Acender e apagar lâmpada</string>
    <string name="imgLock">Bloquear</string>
    <string name="imgOk">Botão de Confirmação do Login</string>
    <string name="imgAddUser">Adicionar Usuário</string>
    <string name="imgExit">Sair do Sistema</string>
    <string name="imgUserAvailable">Usuário Disponível</string>
    <string name="imgListLog">Listar Log</string>
    <string name="Exit">Sair</string>
    <string name="userRegister">Cadastro de Usuário</string>
    <string name="userTypeTitle">Tipo</string>
    <string name="userNormalType">Normal</string>
    <string name="userManagerType">Administrador</string>
    <string name="btnConfirm"> Confirmar </string>
    <string name="functions">Funcionalidades</string>
    <string name="fatecImage">Logo da Fatec-SJC</string>
	<string name="copyRight">Aluno:	Osmar Salles de Carvalho, 2013</string>
	<string name="loading">Aguarde</string>
	<string name="control">Controle</string>
	<string name="log">Log</string>
	
</resources>
